--- a/_config.yml
+++ b/_config.yml
@@ -105,3 +105,4 @@ deploy:
   type: git
   repo: https://github.com/hkwind/hkwind.github.io
   branch: master
+  token: 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
